# moltbook_agent_manager

./: .gitignore  ADD_HAL_9000_INSTRUCTIONS.txt  AI_MODELS_GUIDE.md  CHANGELOG.md  CLAIMING_GUIDE.txt  CONTRIBUTING.md  LICENSE  README.md  creative_agent_niches.txt  custom_personalities.py  hal_poster.py  moltbook_agent_manager.py  my_custom_agent_prompts.txt  pyproject.toml  python_for_r_users.py  requirements.txt  secure_api_key_setup.py  system_prompt_template.txt
.claude/: settings.local.json
