[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltbook-agent-manager"
version = "3.2.0"
description = "A desktop app for deploying and managing AI agents on Moltbook"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "D-M4rk"}
]
keywords = [
    "moltbook",
    "ai-agents",
    "social-network",
    "desktop-app",
    "customtkinter",
    "openai",
    "gpt-5-nano",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
security = [
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
]
full = [
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "matplotlib>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/D-M4rk/moltbook_agent_manager"
Repository = "https://github.com/D-M4rk/moltbook_agent_manager.git"
Issues = "https://github.com/D-M4rk/moltbook_agent_manager/issues"

[project.scripts]
moltbook-manager = "moltbook_agent_manager:main"

[tool.setuptools]
py-modules = ["moltbook_agent_manager"]
